--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,17 +1,37 @@
-@media (min-width: 768px) {
-    main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
-        padding: 2rem;
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 2.5rem;
     }
 
-    .weather h2::after {
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h2::after {
         content: " ⛅";
-        font-size: 1.5rem;
     }
 
-    .weather-icon {
+    .data-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .weather-content {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .weather-icon-mobile {
         display: none;
+    }
+
+    .weather-data {
+        grid-template-columns: repeat(2, 1fr);
+        flex-grow: 1;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .data-grid {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
